@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -84,7 +84,7 @@ public class Bug4184873Test extends IntlTest {
             ObjectInputStream in = getStream(lang);
             if (in != null) {
                 final Locale loc = (Locale)in.readObject();
-                final Locale expected = new Locale(lang, "XX");
+                final Locale expected = Locale.of(lang, "XX");
                 if (!(expected.equals(loc))) {
                     errln("Locale didn't maintain invariants for: "+lang);
                     errln("         got: "+loc);
@@ -123,7 +123,7 @@ public class Bug4184873Test extends IntlTest {
         try {
             ObjectOutputStream out = new ObjectOutputStream(
                     new FileOutputStream("Bug4184873_"+lang));
-            out.writeObject(new Locale(lang, "XX"));
+            out.writeObject(Locale.of(lang, "XX"));
             out.close();
         } catch (Exception e) {
             System.out.println(e);
